<resources>
    <string name="app_name">Ikea</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="isle">Isle</string>
    <string name="save">SAVE</string>
</resources>